--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -81,3 +81,50 @@ body{
     padding-top: 200px;
     color: #fff;
 }
+
+.sound-button {
+    width: 220px;
+    height: 50px;
+}
+
+.seal-type-button {
+    background: transparent;
+    color: lightgrey;
+    border: none;
+    font-size: 3em;
+}
+
+.seal-type-button:hover {
+    color: white;
+}
+
+.soundboard {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    width: 100%;
+    justify-items: center;
+    align-items: center;
+    row-gap: 20px;
+    padding: 3rem;
+}
+
+.divider {
+    color: lightgray;
+    font-size: 3em;
+}
+
+@media (max-width: 780px) {
+    .seal-type-button, .divider {
+        font-size: 2em;
+    }
+    .soundboard {
+        grid-template-columns: repeat(2, auto);
+        padding: 1rem
+    }
+}
+
+@media (max-width: 570px) {
+    .soundboard {
+        grid-template-columns: repeat(1, auto);
+    }
+}
